--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/nunito": "^5.2.6",
+    "@fontsource/poppins": "^5.2.6",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
